--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a href="tel:+380322975020">+38 032 297 50 20</a>
               <p>8 Lystopadovoho Chynu,Lviv</p>
             </div>
-            <div class="art d-flex-columns">
+            <div class="artd d-flex-columns">
               <p>Art & Congress</p>
               <p><span>hall</span></p>
             </div>
